reconfiguring sizes of triangles to prevent getting cut off from text in html

--- a/style.css
+++ b/style.css
@@ -3,8 +3,9 @@ html, body {
   padding: 25;
 }
 
+
 canvas {
-  display: block;
+  display: flex;
   max-height: 100%;
   max-width: 100%;
 }
